2007-09-12  Martin Hunt  <hunt@redhat.com>
	PR 5019
	* elaborate.cxx (visit_hist_op): Remove log histogram param.
	* translate.cxx (assert_hist_compatible): Ditto.
	* staptree.cxx (hist_op::print): Ditto.
	* session.h (statistic_decl): Ditto.
	
	* parse.cxx (expect_number): Allow negative numbers.
	Also validate that input is really numeric. This is used 
	by histograms to get the parameters.
	(parse_hist_op_or_bare_name): Remove code to get parameter
	for log histograms. 

2007-09-12  David Smith  <dsmith@redhat.com>

	* translate.cxx (c_unparser::emit_common_header): Added 'data'
	variable to context structure to support procfs probes.
	* tapsets.cxx: Improved procfs probe handling.

2007-09-10  David Smith  <dsmith@redhat.com>

	* tapsets.cxx (procfs_derived_probe_group::emit_module_init):
	Improved procfs probe handling (still non-working).
	(procfs_builder::build): Ditto.
	(register_standard_tapsets): Ditto.
	(all_session_groups): Ditto.

2007-09-10  Martin Hunt  <hunt@redhat.com>

	* tapsets.cxx, session.h, elaborate.cxx: Start of procfs 
	interaction support. PR 1154.

2007-09-06  Masami Hiramatsu <mhiramat@redhat.com>

	PR 4542
	* tapsets.cxx (dwarf_query::build_blacklist): add __switch_to to
	blacklisted_return_probes on i686

2007-08-30  David Smith  <dsmith@redhat.com>

	PR 4983
	* translate.cxx (c_tmpcounter::visit_print_format): Don't declare
	temporaries for number and string constants.
	(c_unparser::visit_print_format): Use numeric and string constants
	directly instead of copying them into temporaries.

2007-08-27  Frank Ch. Eigler  <fche@redhat.com>

	PR 4817
	* NEWS: Mention retirement of LKET.
	* configure.ac: Remove mysql dependency.
	* systemtap.spec.in: Remove glib2 dependency.
	* configure, config.in: Regenerated.

2007-08-24  Frank Ch. Eigler  <fche@elastic.org>

	* configure.ac: Check for proper $PROCFLAGS-dependent -lcap.
	* Makefile.am (staprun_LDADD): Use autoconf variable rather than
	-lcap literal.