@@ -1,3 +1,8 @@
+2007-09-12  Frank Ch. Eigler  <fche@elastic.org>
+
+	PR 5023.
+	* buildok/ten.stp: Extend some more.
+	
 2007-09-12  Martin Hunt  <hunt@redhat.com>
 
 	* systemtap.maps/foreach_limit.stp: Clean up the aggregates
