@@ -1,4 +1,11 @@
+2007-09-12  Frank Ch. Eigler  <fche@elastic.org>
+
+	PR 5023
+	* translate.cxx (c_unparser::visit_literal_number): Support LLONG_MIN.
+	(visit_unary_expression): Likewise.
+
 2007-09-12  Martin Hunt  <hunt@redhat.com>
+
 	PR 5019
 	* elaborate.cxx (visit_hist_op): Remove log histogram param.
 	* translate.cxx (assert_hist_compatible): Ditto.
